# cc-parser

./: .gitignore  Cargo.toml  README.md  main.rs  output.txt  warc_types.rs  wc.rs
cc-data/warc/: sample.warc
testdata/: sample.warc
