[package]
name = "cc-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
warc = "0.4.0" # Or the latest version
encoding_rs = "0.8"
regex = "1"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.27"  # Fast HTML parser
markup5ever_rcdom = "0.3"  # DOM tree for html5ever
whatlang = "0.12"
rayon = "1.8"

[workspace]

[[bin]]
name = "cc-parser"
path = "main.rs"
