[package]
name = "cc-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
warc = "0.4.0" # Or the latest version
encoding_rs = "0.8"
regex = "1"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.25"  # Fast HTML parser
markup5ever_rcdom = "0.1.0"  # DOM tree for html5ever
whatlang = "0.12"
rayon = "1.8"
lol_html = "2.4.0"

[workspace]

[[bin]]
name = "cc-parser"
path = "main.rs"
