[package]
name = "cc-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
warc = "0.4.0" # Or the latest version
encoding_rs = "0.8"
regex = "1"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.31.0"  # Fast HTML parser
markup5ever_rcdom = "0.5.3-unofficial"  # DOM tree for html5ever
whatlang = "0.16.4"
rayon = "1.8"
lol_html = "2.4.0"
html2text = "0.15.0"
itertools = "0.14.0"
url = "2"

[workspace]

[[bin]]
name = "cc-parser"
path = "main.rs"
